[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "upal-local-features"
version = "0.1.0"
description = "Standalone inference for the UPAL joint point-line feature network"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "torch>=2.0",
    "torchvision>=0.15",
]

[tool.setuptools.packages.find]
include = ["upal*"]
